--- a/synapsis/src/main/resources/static/css/styles.css
+++ b/synapsis/src/main/resources/static/css/styles.css
@@ -1,4 +1,149 @@
 /* Insert common styles to this file */
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;500;700;900&family=Merriweather+Sans:wght@300;500;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+:root {
+  --color-bg: #fff;
+  --color-primary: #fa2742;
+  --color-primary-variant: #fc9ca8;
+  --color-black: #1d2228;
+  --color-black-variant: #3c4653;
+  --color-grey: #8f949b;
+  --color-light: #e1e2e2;
+
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-sm: 90%;
+
+  --transition-ease: all 400ms ease;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  font-family: 'Merriweather Sans', sans-serif;
+  background: var(--color-bg);
+  color: var(--color-black);
+  line-height: 1.7;
+}
+
+h1, h2{
+  font-family: 'Catamaran', sans-serif;
+  font-weight: 700;
+}
+
 h1 {
-    color: red;
+  font-size: 2.5rem;
+}
+
+h3, h4, h5, h6 {
+  font-weight: 500;
+}
+
+section {
+  margin-top: 8rem;
+}
+
+section > h2,
+section > h5 {
+  text-align: center;
+  color: var(--color-black);
+}
+
+section > h2 {
+  color: var(--color-black);
+  margin-bottom: 3rem;
+}
+
+a {
+  color: var(--color-primary);
+  transition: var(--transition-ease);
+}
+
+a:hover {
+  color: var(--color-white)
+}
+
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+.btn {
+  width: max-content;
+  display: inline-block;
+  color: var(--color-primary);
+  padding: 0.75rem 1.2rem;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  border: 1px solid var(--color-primary);
+  transition: var(--transition-ease);
+}
+
+.btn:hover {
+  background: var(--color-white);
+  color: var(--color-bg);
+  border-color: transparent;
+}
+
+.btn-primary {
+  background: var(--color-primary);
+  color: var(--color-bg);
+}
+
+.btn-secondary {
+  background : var(--color-primary-variant);
+  color: var(--color-bg);
+}
+
+.btn-cancel {
+  background : var(--color-grey);
+  color: var(--color-bg);
+}
+
+img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+
+.text-light {
+  color: var(--color-light);
+}
+
+/* MEDIA QUERIES (MEDIUM DEVICES) */
+@media screen and (max-width: 1024px) {
+  .container {
+    width: var(--container-width-md);
+  }
+
+  section {
+    margin-top: 6rem;
+  }
+}
+
+/* MEDIA QUERIES (SMALL DEVICES) */
+@media screen and (max-width: 600px) {
+  .container {
+    width: var(--container-width-sm);
+  }
+
+  section > h2{
+    margin-bottom: 2rem;
+  }
 }
