--- a/synapsis/src/main/resources/templates/pages/userpage.html
+++ b/synapsis/src/main/resources/templates/pages/userpage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="_layout">
 <div layout:fragment="content">
-    <h1>new home page</h1>
+    <h1>Userpage</h1>
+    <p th:text="${name}"></p>
+    <p th:text="${email}"></p>
 </div>
 </html>
