--- a/synapsis/src/main/resources/static/css/styles.css
+++ b/synapsis/src/main/resources/static/css/styles.css
@@ -2,148 +2,165 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;500;700;900&family=Merriweather+Sans:wght@300;500;700&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
 :root {
-  --color-bg: #fff;
-  --color-primary: #fa2742;
-  --color-primary-variant: #fc9ca8;
-  --color-black: #1d2228;
-  --color-black-variant: #3c4653;
-  --color-grey: #8f949b;
-  --color-light: #e1e2e2;
+    --color-bg: #fff;
+    --color-primary: #fa2742;
+    --color-primary-variant: #fc9ca8;
+    --color-black: #1d2228;
+    --color-black-variant: #3c4653;
+    --color-grey: #8f949b;
+    --color-light: #e1e2e2;
 
-  --container-width-lg: 75%;
-  --container-width-md: 86%;
-  --container-width-sm: 90%;
+    --container-width-lg: 75%;
+    --container-width-md: 86%;
+    --container-width-sm: 90%;
 
-  --transition-ease: all 400ms ease;
+    --transition-ease: all 400ms ease;
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 ::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 body {
-  font-family: 'Merriweather Sans', sans-serif;
-  background: var(--color-bg);
-  color: var(--color-black);
-  line-height: 1.7;
+    font-family: 'Merriweather Sans', sans-serif;
+    background: var(--color-bg);
+    color: var(--color-black);
+    line-height: 1.7;
+    overflow: scroll;
 }
 
-h1, h2{
-  font-family: 'Catamaran', sans-serif;
-  font-weight: 700;
+h1, h2 {
+    font-family: 'Catamaran', sans-serif;
+    font-weight: 700;
 }
 
 h1 {
-  font-size: 2.5rem;
+    font-size: 2.5rem;
 }
 
 h3, h4, h5, h6 {
-  font-weight: 500;
+    font-weight: 500;
 }
 
 section {
-  margin-top: 8rem;
+    margin-top: 8rem;
 }
 
 section > h2,
 section > h5 {
-  text-align: center;
-  color: var(--color-black);
+    text-align: center;
+    color: var(--color-black);
 }
 
 section > h2 {
-  color: var(--color-black);
-  margin-bottom: 3rem;
+    color: var(--color-black);
+    margin-bottom: 3rem;
 }
 
 a {
-  color: var(--color-primary);
-  transition: var(--transition-ease);
+    color: var(--color-black);
+    transition: var(--transition-ease);
+    cursor: pointer;
 }
 
 a:hover {
-  color: var(--color-white)
+    color: var(--color-primary)
 }
 
 .container {
-  width: var(--container-width-lg);
-  margin: 0 auto;
+    width: var(--container-width-lg);
+    margin: 0 auto;
 }
 
 .btn {
-  width: max-content;
-  display: inline-block;
-  color: var(--color-primary);
-  padding: 0.75rem 1.2rem;
-  border-radius: 0.6rem;
-  cursor: pointer;
-  border: 1px solid var(--color-primary);
-  transition: var(--transition-ease);
+    width: max-content;
+    display: inline-block;
+    color: var(--color-primary);
+    padding: 0.75rem 1.2rem;
+    border-radius: 0.6rem;
+    cursor: pointer;
+    border: 1px solid var(--color-primary);
+    transition: var(--transition-ease);
 }
 
 .btn:hover {
-  background: var(--color-white);
-  color: var(--color-bg);
-  border-color: transparent;
+    background: var(--color-primary-variant);
+    border-color: transparent;
 }
 
 .btn-primary {
-  background: var(--color-primary);
-  color: var(--color-bg);
+    background: var(--color-primary);
+    color: var(--color-bg);
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: 2rem;
 }
 
 .btn-secondary {
-  background : var(--color-primary-variant);
-  color: var(--color-bg);
+    background: var(--color-primary-variant);
+    color: var(--color-bg);
 }
 
 .btn-cancel {
-  background : var(--color-grey);
-  color: var(--color-bg);
+    background: var(--color-grey);
+    color: var(--color-bg);
 }
 
 img {
-  display: block;
-  width: 100%;
-  object-fit: cover;
+    display: block;
+    width: 100%;
+    object-fit: cover;
 }
 
 .text-light {
-  color: var(--color-light);
+    color: var(--color-light);
 }
 
 /* MEDIA QUERIES (MEDIUM DEVICES) */
 @media screen and (max-width: 1024px) {
-  .container {
-    width: var(--container-width-md);
-  }
+    .container {
+        width: var(--container-width-md);
+    }
 
-  section {
-    margin-top: 6rem;
-  }
+    section {
+        margin-top: 6rem;
+    }
 }
 
 /* MEDIA QUERIES (SMALL DEVICES) */
 @media screen and (max-width: 600px) {
-  .container {
-    width: var(--container-width-sm);
-  }
+    .container {
+        width: var(--container-width-sm);
+    }
 
-  section > h2{
-    margin-bottom: 2rem;
-  }
+    section > h2 {
+        margin-bottom: 2rem;
+    }
+}
+
+.clearfix:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+
+.clearfix {
+    display: inline-block;
 }
