--- a/synapsis/src/main/resources/templates/fragments/footer.html
+++ b/synapsis/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,96 @@
-<div th:fragment="footer">
-  This is the footer
+<div th:fragment="footer" class="h-64">
+    <div class="w-full  bg-black-variant absolute bottom-0 left-0">
+        <div class="container flex flex-row justify-between mt-8">
+            <div class="flex-none mt-4 w-3/6">
+                <img src="/assets/synapsis_red.svg" class="h-12 w-48 mr-10" alt="Synapsis Logo">
+            </div>
+            <div class="flex-1 container flex-col items-start">
+                <div class="flex-none font-bold text-white text-xl">
+                    General
+                </div>
+                <div class="flex-none font-light text-white text-lg mt-4">
+                    <a> Sign Up </a>
+                </div>
+                <div class="flex-none font-light text-white text-lg">
+                    <a> Help Center </a>
+                </div>
+                <div class="flex-none font-light text-white text-lg">
+                    <a> About </a>
+                </div>
+                <div class="flex-none font-light text-white text-lg">
+                    <a> Careers </a>
+                </div>
+            </div>
+            <div class="flex-1 container flex-col items-start">
+                <div class="flex-none font-bold text-white text-xl">
+                    Services
+                </div>
+                <div class="flex-none font-light text-white text-lg mt-4">
+                    <a> Sign Up </a>
+                </div>
+                <div class="flex-none font-light text-white text-lg">
+                    <a> Help Center </a>
+                </div>
+                <div class="flex-none font-light text-white text-lg">
+                    <a> About </a>
+                </div>
+                <div class="flex-none font-light text-white text-lg">
+                    <a> Careers </a>
+                </div>
+            </div>
+            <div class="flex-1 container flex-col items-start">
+                <div class="flex-none font-bold text-white text-xl">
+                    Information
+                </div>
+                <div class="flex-none font-light text-white text-lg mt-4">
+                    <a> Companies </a>
+                </div>
+                <div class="flex-none font-light text-white text-lg">
+                    <a> Members </a>
+                </div>
+                <div class="flex-none font-light text-white text-lg">
+                    <a> News </a>
+                </div>
+                <div class="flex-none font-light text-white text-lg">
+                    <a> Posts </a>
+                </div>
+            </div>
+        </div>
+        <div class="container flex flex-row justify-between items-center mt-8 xl:left-1/4 lg:w-3/6">
+            <div class="flex-none mr-4">
+                <img src="/assets/synapsis_red.svg" class="h-3 w-14 inline" alt="Synapsis Logo">
+                <div class="inline font-light text-white text-xs">
+                    &#169; 2023
+                </div>
+            </div>
+
+            <div class="flex-none font-light text-white text-xs mr-4">
+                <a href="#">Companies</a>
+            </div>
+            <div class="flex-none font-light text-white text-xs mr-4">
+                <a href="#">Accessibility</a>
+            </div>
+            <div class="flex-none font-light text-white text-xs mr-4">
+                <a href="#">User Agreement</a>
+            </div>
+            <div class="flex-none font-light text-white text-xs mr-4">
+                <a href="#">Privacy Policy</a>
+            </div>
+            <div class="flex-none font-light text-white text-xs mr-4">
+                <a href="#">Cookie Policy</a>
+            </div>
+            <div class="flex-none font-light text-white text-xs mr-4">
+                <a href="#">Copyright Policy</a>
+            </div>
+            <div class="flex-none font-light text-white text-xs mr-4">
+                <a href="#">Brand Policy</a>
+            </div>
+            <div class="flex-none font-light text-white text-xs mr-4">
+                <a href="#">Community Guidelines</a>
+            </div>
+            <div class="flex-none font-light text-white text-xs mr-4">
+                <a href="#">English</a>
+            </div>
+        </div>
+    </div>
 </div>
