--- a/synapsis/src/main/resources/templates/pages/home.html
+++ b/synapsis/src/main/resources/templates/pages/home.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="_layout">
+<html xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="_layout">
 <div layout:fragment="content">
-    <h1>new home page</h1>
+    <div class="container flex flex-wrap justify-between items-center">
+        <div class="flex-none mt-24 w-1/3">
+            <div class="text-6xl text-black font-medium font-serif">
+                Your space to make connections
+            </div>
+            <div class="text-2xl text-grey font-normal mt-16">
+                With synapsis you can form connections, communicate and interact with your professional network.
+            </div>
+            <div class="text-2xl text-grey font-normal mt-8 ">
+                Sign up now to start growing your network.
+            </div>
+            <button class="text-2xl btn btn-primary mt-8 ml-6">
+                Register
+            </button>
+        </div>
+        <div class="flex-none mt-48 w-3/5 h-full">
+            <img src="" alt="Front Page Image">
+        </div>
+    </div>
 </div>
 </html>
