--- a/synapsis/src/main/resources/templates/pages/home.html
+++ b/synapsis/src/main/resources/templates/pages/home.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="_layout">
 <div layout:fragment="content">
-    <div class="container flex flex-wrap justify-between items-center">
+    <div class="container flex flex-wrap w-10/12 justify-between items-center">
         <div class="flex-none mt-24 w-1/3">
             <div class="text-6xl text-black font-medium font-serif">
                 Your space to make connections
@@ -20,9 +20,49 @@
                 Create Admin (Restricted)
             </a>
         </div>
-        <div class="flex-none mt-48 w-3/5 h-full">
-            <img src="" alt="Front Page Image">
+        <div class="flex-none mt-24 w-3/5 h-full">
+            <img src="../../assets/hero1.png" alt="Hero Image 1">
         </div>
+    </div>
+    <div class="container flex flex-wrap w-10/12 justify-between items-center">
+        <div class="flex-none mt-24 w-3/5 h-full">
+            <img src="../../assets/hero2.png" alt="Hero Image 2">
+        </div>
+        <div class="flex-none mt-24 w-1/3">
+            <div class="text-6xl text-black font-medium font-serif">
+                Find your next adventure.
+            </div>
+            <div class="text-2xl text-grey font-normal mt-16">
+                At synapsis, companies let you know the most lucrative job opportunities currently in the market.
+            </div>
+            <div class="text-2xl text-grey font-normal mt-8 ">
+                Sign up now for the next big thing in employment.
+            </div>
+            <button class="text-2xl btn btn-primary mt-8 ml-6">
+                Search Jobs
+            </button>
+        </div>
+    </div>
+    <div class="container flex flex-wrap mt-24 w-10/12 justify-between items-center bg-primary-variant">
+        <div class="flex-none mt-24 w-3/5 h-full">
+            <div class="text-8xl text-primary font-medium font-serif">
+                Post your job opening for millions to see.
+            </div>
+        </div>
+        <button class="text-2xl btn btn-primary mt-8 ml-6 btn-primary">
+            Post Your Job
+        </button>
+    </div>
+    <div class="container flex flex-wrap w-10/12 justify-between items-center">
+        <div class="flex-none mt-24 w-full">
+            <img src="../../assets/hero3.png" alt="Hero Image 3">
+        </div>
+        <div class="flex-none w-full text-8xl text-primary font-medium font-serif items-center">
+            Connect with people.
+        </div>
+        <button class="text-2xl w-1/3 btn btn-primary mt-8 ml-6 btn-primary items-center">
+            Find people you know.
+        </button>
     </div>
 </div>
 </html>
