Homepage design from mockup implemented. Adjusted header and footer alignments and z-indices. Additional graphical assets uploaded.
#68

--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,5 @@
 <div th:fragment="navbar" class="h-32">
-    <nav class="bg-white px-4 lg:px-2 py-6 fixed w-full z-20 top-0 left-0">
+    <nav class="flex-auto bg-white px-4 lg:px-2 py-6 fixed w-full z-20 items-center">
         <div class="container flex flex-wrap items-center justify-between mx-auto">
             <a href="/" class="flex items-center">
                 <img src="/assets/synapsis_black.svg" class="h-12 lg:h-16 mt-3 mr-3 " alt="Synapsis Logo">
