--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -16,7 +16,7 @@
                            aria-current="page">Home</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="/network"
                         >About</a>
                     </li>
                     <li>
