--- a/synapsis/src/main/resources/static/css/styles.css
+++ b/synapsis/src/main/resources/static/css/styles.css
@@ -31,8 +31,24 @@ html {
     scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar {
+::-webkit-scrollbar:vertical {
     display: none;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar {
+    height: 10px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: var(--color-black-variant);
 }
 
 body {
@@ -111,13 +127,32 @@ a:hover {
 }
 
 .btn-secondary {
-    background: var(--color-primary-variant);
+    background: #ffffff;
+    color: var(--color-primary);
+    border: 1px solid var(--color-primary);
+}
+
+.btn-black {
+    background: var(--color-black-variant);
     color: var(--color-bg);
+    border: 1px solid var(--color-black-variant);
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: 2rem;
+}
+
+.btn-black:hover {
+    background: var(--color-light);
+    border-color: transparent;
 }
 
 .btn-cancel {
     background: var(--color-grey);
     color: var(--color-bg);
+    border: 1px solid var(--color-grey);
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: 2rem;
 }
 
 img {
