--- a/synapsis/src/main/resources/templates/pages/accessDenied.html
+++ b/synapsis/src/main/resources/templates/pages/accessDenied.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div class="flex items-center justify-center h-screen">
-        <div class="flex flex-col items-center border border-gray-600 p-6 bg-gray-300">
+        <div class="flex flex-col items-center border border-black-variant p-6 bg-grey">
             <h1 class="text-3xl font-bold">Access Denied</h1>
             <p>You are not authorized to view this page.</p>
             <a th:href="@{/}" class="underline">Return to homepage</a>
