--- a/synapsis/src/main/resources/templates/pages/adminCreationPage.html
+++ b/synapsis/src/main/resources/templates/pages/adminCreationPage.html
@@ -10,7 +10,11 @@
                 extend: {
                     colors: {
                         'primary': '#fa2742',
+                        'primary-variant': '#fc9ca8',
+                        'black': '#1d2228',
+                        'black-variant': '#3c4653',
                         'grey': '#8f949b',
+                        'light': '#e1e2e2'
                     },
                     fontFamily: {
                         sans: ['Merriweather Sans', 'sans-serif'],
@@ -27,17 +31,17 @@
 <div th:replace="fragments/navbar :: navbar"></div>
 <form th:action= "@{/admincreation}" th:object="${registrationRequest}" method="post">
     <div class="container flex items-center justify-center mb-8 w-1/2">
-        <div class="relative flex flex-col p-6 border space-y-8 rounded-sm border-grey shadow-lg w-full m-8 hover:bg-grey">
-            <p class="font-thin text-3xl font-serif text-gray-500">Create Admin</p>
+        <div class="relative flex flex-col p-6 border space-y-8 rounded-sm border-black-variant bg-grey shadow-lg w-full m-8 hover:bg-white">
+            <p class="font-thin text-3xl font-serif text-black-variant text-center">Create Admin</p>
             <p th:text="${error}" class="font-light text-red-500"></p>
             <input type="text" name = "name" th:field="*{name}" placeholder="Enter Name"
-                   class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-gray-300"/>
+                   class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-light"/>
             <input type="text" name = "email" th:field="*{email}" placeholder="Enter Email"
-                   class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-gray-300" required/>
+                   class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-light" required/>
             <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-red-500"></div>
             <input type="password" name ="password"  id="password" th:field="*{password}" placeholder="Enter Password"
-                   class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-gray-300"
-                   th:onmouseout="check_password()" required/>
+                   class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-light"
+                   required/>
             <div class="absolute bottom-32 right-8" th:onclick="toggle()">
                 <svg id="closedEye" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3.98 8.223A10.477 10.477 0 001.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.45 10.45 0 0112 4.5c4.756 0 8.773 3.162 10.065 7.498a10.523 10.523 0 01-4.293 5.774M6.228 6.228L3 3m3.228 3.228l3.65 3.65m7.894 7.894L21 21m-3.228-3.228l-3.65-3.65m0 0a3 3 0 10-4.243-4.243m4.242 4.242L9.88 9.88" />
