--- a/synapsis/src/main/resources/templates/pages/adminCreationSuccess.html
+++ b/synapsis/src/main/resources/templates/pages/adminCreationSuccess.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <div class="flex items-center justify-center h-screen">
-    <div class="flex flex-col items-center border border-gray-600 p-6 bg-gray-300">
+    <div class="flex flex-col items-center border border-black-variant p-6 bg-grey">
         <h1 class="text-3xl font-bold">Success!</h1>
         <p>The ADMIN was successfully created. Choose what you want to do next:</p>
         <a th:href="@{/}">Return to homepage</a>
