Alignment and minor details completed.
#68

--- a/synapsis/src/main/resources/templates/pages/home.html
+++ b/synapsis/src/main/resources/templates/pages/home.html
@@ -41,23 +41,23 @@
         </div>
     </div>
     <div class="container flex flex-wrap mt-24 w-10/12 justify-between items-center bg-primary-variant">
-        <div class="flex-none mt-24 w-3/5 h-full">
-            <div class="text-8xl text-primary font-medium font-serif">
+        <div class="flex-none my-12 w-2/3 h-full">
+            <div class="text-7xl text-primary font-medium mx-10 font-serif">
                 Post your job opening for millions to see.
             </div>
         </div>
-        <button class="text-2xl btn btn-primary mt-8 ml-6 btn-primary">
+        <button class="text-2xl btn btn-primary mx-10 btn-primary">
             Post Your Job
         </button>
     </div>
-    <div class="container flex flex-wrap w-10/12 justify-between items-center">
-        <div class="flex-none mt-24 w-full">
+    <div class="container flex flex-col w-10/12 mb-24 justify-center items-center">
+        <div class="w-2/3">
             <img src="../../assets/hero3.png" alt="Hero Image 3">
         </div>
-        <div class="flex-none w-full text-8xl text-primary font-medium font-serif items-center">
+        <div class="text-6xl text-primary font-medium font-serif">
             Connect with people.
         </div>
-        <button class="text-2xl w-1/3 btn btn-primary mt-8 ml-6 btn-primary items-center">
+        <button class="text-2xl w-1/3 btn btn-primary mt-8 ml-6 btn-primary">
             Find people you know.
         </button>
     </div>
