--- a/synapsis/src/main/resources/templates/fragments/footer.html
+++ b/synapsis/src/main/resources/templates/fragments/footer.html
@@ -25,7 +25,10 @@
                 <div class="flex-none font-bold text-white text-xl">
                     Services
                 </div>
-                <div class="flex-none font-light text-white text-lg mt-4">
+                <div class="flex-none font-light text-white text-lg">
+                    <a th:href="@{/admincreationpage}"> Create Admin </a>
+                </div>
+                <div class="flex-none font-light text-white text-lg">
                     <a> Sign Up </a>
                 </div>
                 <div class="flex-none font-light text-white text-lg">
@@ -37,6 +40,7 @@
                 <div class="flex-none font-light text-white text-lg">
                     <a> Careers </a>
                 </div>
+
             </div>
             <div class="flex-1 container flex-col items-start">
                 <div class="flex-none font-bold text-white text-xl">
