#50 added appropriate test cases

--- a/synapsis/src/main/resources/templates/pages/createJob.html
+++ b/synapsis/src/main/resources/templates/pages/createJob.html
@@ -31,7 +31,7 @@
 </head>
 <div>
 
-  <form th:action="@{/createJob}" method="post">
+  <form th:action="@{/createjob}" method="post">
 
     <p th:if="${param.error}">Invalid input.</p>
 
