--- a/synapsis/src/main/resources/templates/pages/userpage.html
+++ b/synapsis/src/main/resources/templates/pages/userpage.html
@@ -33,6 +33,10 @@
                         </tr>
                     </table>
                 </div>
+                <form th:if="${isConnectedWith}" th:action="@{/disconnect}" method="post">
+                    <input type="hidden" name="id" th:value="${id}" />
+                    <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Disconnect</button>
+                </form>
             </div>
         </div>
 
