--- a/synapsis/src/main/resources/templates/pages/userpage.html
+++ b/synapsis/src/main/resources/templates/pages/userpage.html
@@ -2,33 +2,29 @@
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="_layout">
 <div layout:fragment="content">
-    <meta charset="ISO-8859-1">
-    </script>
-    <link rel="stylesheet" href="/css/styles.css">
-
     <div>
         <div class="pl-32 pr-5 pb-3">
-            <div class="flex max-w-xl bg-neutral-100 h-[10rem]    border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+            <div class="flex max-w-xl bg-neutral-100 h-[10rem] border-gray-200 rounded-lg shadow">
                 <div class="img">
-                    <img class=" mt-3.5 rounded-full w-28 h-32   " src="../../assets/default_user.svg" alt="Default"/>
+                    <img class="mt-3.5 rounded-full w-28 h-32" src="../../assets/default_user.svg" alt="Default"/>
                 </div>
                 <div class="p-5 ">
-                    <h5 class="text-left text-2xl  font-bold tracking-tight text-gray-900 dark:text-white"
+                    <h5 class="text-left text-2xl font-bold tracking-tight text-gray-900"
                         th:text="${name}"></h5>
                     <table>
                         <tr>
                             <th>
-                                <p class="font-normal  text-gray-700 dark:text-gray-400" th:text="${work}"></p>
+                                <p class="font-normal text-gray-700" th:text="${work}"></p>
                             </th>
                             <th>
-                                <p class="ml-40  font-normal  text-gray-700 dark:text-gray-400"
+                                <p class="ml-40 font-normal text-gray-700"
                                    th:text="${education}"></p>
                             </th>
                         </tr>
                         <tr>
                             <th></th>
                             <th>
-                                <p class="font-normal pl-40 text-gray-700 dark:text-gray-400" th:text="${phone}"></p>
+                                <p class="font-normal pl-40 text-gray-700" th:text="${phone}"></p>
                             </th>
                         </tr>
                     </table>
@@ -40,7 +36,7 @@
             </div>
         </div>
 
-        <div class="flex max-w-lg  h-[8rem]  bg-neutral-100 mr-60 absolute top-32 right-80 border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div class="flex max-w-lg h-[8rem] bg-neutral-100 mr-60 absolute top-32 right-80 border-gray-200 rounded-lg shadow">
             <div class="pr-10 pb-10 pl-10 pt-5 ">
                 <a th:href="@{/user/update}" class=" text-left text-xl  font-normal  text-gray-900">
                     Edit Public Profile
@@ -52,90 +48,90 @@
         </div>
     </div>
     <div class="pl-32 mb-5  ">
-        <div class="flex max-w-xl bg-neutral-100 h-[5rem]   border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
             <table>
                 <tr>
                     <th>
-                        <p class="text-left text-2xl ml-8 font-bold text-gray-900 dark:text-white ">Volunteering</p>
+                        <p class="text-left text-2xl ml-8 font-bold text-gray-900">Volunteering</p>
                     </th>
                 </tr>
                 <td>
-                    <p class="font-normal ml-10 text-gray-700 dark:text-gray-400" th:text="${volunteering}"></p>
+                    <p class="font-normal ml-10 text-gray-700" th:text="${volunteering}"></p>
                 </td>
             </table>
         </div>
     </div>
 
     <div class="pl-32 mb-5 ">
-        <div class="flex max-w-xl bg-neutral-100 h-[5rem]   border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
             <table>
                 <tr>
                     <th>
-                        <p class="text-left text-2xl ml-8 font-bold text-gray-900 dark:text-white ">Course(s)</p>
+                        <p class="text-left text-2xl ml-8 font-bold text-gray-900">Course(s)</p>
                     </th>
                 </tr>
                 <td>
-                    <p class="font-normal ml-10 text-gray-700 dark:text-gray-400" th:text="${course}"></p>
+                    <p class="font-normal ml-10 text-gray-700" th:text="${course}"></p>
                 </td>
             </table>
         </div>
     </div>
 
     <div class="pl-32 mb-5 ">
-        <div class="flex max-w-xl bg-neutral-100 h-[5rem]   border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
             <table>
                 <tr>
                     <th>
-                        <p class="text-left text-2xl ml-8 font-bold text-gray-900 dark:text-white ">Project(s)</p>
+                        <p class="text-left text-2xl ml-8 font-bold text-gray-900">Project(s)</p>
                     </th>
                 </tr>
                 <td>
-                    <p class="font-normal ml-10 text-gray-700 dark:text-gray-400" th:text="${project}"></p>
+                    <p class="font-normal ml-10 text-gray-700" th:text="${project}"></p>
                 </td>
             </table>
         </div>
     </div>
 
     <div class="pl-32 mb-5 ">
-        <div class="flex max-w-xl bg-neutral-100 h-[5rem]   border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
             <table>
                 <tr>
                     <th>
-                        <p class="text-left text-2xl ml-8 font-bold text-gray-900 dark:text-white ">Award(s)</p>
+                        <p class="text-left text-2xl ml-8 font-bold text-gray-900">Award(s)</p>
                     </th>
                 </tr>
                 <td>
-                    <p class="font-normal ml-10 text-gray-700 dark:text-gray-400" th:text="${award}"></p>
+                    <p class="font-normal ml-10 text-gray-700" th:text="${award}"></p>
                 </td>
             </table>
         </div>
     </div>
 
     <div class="pl-32  mb-5 ">
-        <div class="flex max-w-xl bg-neutral-100 h-[5rem]   border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
             <table>
                 <tr>
                     <th>
-                        <p class="text-left text-2xl ml-8 font-bold text-gray-900 dark:text-white ">Skill(s)</p>
+                        <p class="text-left text-2xl ml-8 font-bold text-gray-900">Skill(s)</p>
                     </th>
                 </tr>
                 <td>
-                    <p class="font-normal ml-10 text-gray-700 dark:text-gray-400" th:text="${skill}"></p>
+                    <p class="font-normal ml-10 text-gray-700" th:text="${skill}"></p>
                 </td>
             </table>
         </div>
     </div>
 
     <div class="pl-32 mb-44 ">
-        <div class="flex max-w-xl bg-neutral-100 h-[5rem]   border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
             <table>
                 <tr>
                     <th>
-                        <p class="text-left text-2xl ml-8 font-bold text-gray-900 dark:text-white ">Language(s)</p>
+                        <p class="text-left text-2xl ml-8 font-bold text-gray-900">Language(s)</p>
                     </th>
                 </tr>
                 <td>
-                    <p class="font-normal ml-10 text-gray-700 dark:text-gray-400" th:text="${language}"></p>
+                    <p class="font-normal ml-10 text-gray-700" th:text="${language}"></p>
                 </td>
             </table>
         </div>
