--- a/synapsis/src/main/resources/templates/pages/companypage.html
+++ b/synapsis/src/main/resources/templates/pages/companypage.html
@@ -2,13 +2,9 @@
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="_layout">
 <div layout:fragment="content">
-    <meta charset="ISO-8859-1">
-    </script>
-    <link rel="stylesheet" href="/css/styles.css">
-
     <div>
         <div class="pl-32 pr-5 pb-3">
-            <div class="flex max-w-2xl bg-neutral-100 h-[10rem]    border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+            <div class="flex max-w-2xl bg-neutral-100 h-[10rem]    border-gray-200 rounded-lg shadow">
                 <div class="img">
                     <img class=" mt-3.5 rounded-full w-28 h-32   " src="../../assets/default_user.svg" alt="Default"/>
                 </div>
@@ -47,7 +43,7 @@
             </div>
         </div>
 
-        <div class="max-w-lg h-[8rem] bg-neutral-100   mr-60 absolute top-32 right-80 border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div class="max-w-lg h-[8rem] bg-neutral-100   mr-60 absolute top-32 right-80 border-gray-200 rounded-lg shadow">
             <div class="pr-10 pb-10 pl-10 pt-5 ">
                 <a th:href="@{/company/update}" class=" text-left text-xl  font-normal  text-gray-900">
                     Edit Public Profile
