--- a/synapsis/src/main/resources/templates/pages/updateuserpage.html
+++ b/synapsis/src/main/resources/templates/pages/updateuserpage.html
@@ -2,11 +2,10 @@
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="_layout">
 <div layout:fragment="content">
-    <meta charset="ISO-8859-1">
 
     <p th:text="${error}"></p>
     <form th:action="@{/user/update}" th:object="${updateAppUserProfileRequest}" method="post">
-        <div class="flex max-w-xl bg-neutral-100 border-gray-200 ml-28 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <div class="flex max-w-xl bg-neutral-100 border-gray-200 ml-28 rounded-lg shadow">
             <div class="p-5">
                 <label>Education</label><br>
                 <input type="text" id="education" th:field="*{education}"
