#22 Added link and redirect logic to controller so that the authenticated user's profile is reachable via the navbar

--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -74,7 +74,7 @@
                             Notifications
                         </li>
                     </a>
-                    <a href="#">
+                    <a href="/user">
                         <li class="flex flex-col items-center">
                             <i class="fa-solid fa-user fa-2x h-10"></i>
                             My Profile
