Fixed unlinked imaged in sign-in page.
#99

--- a/synapsis/src/main/resources/templates/pages/login.html
+++ b/synapsis/src/main/resources/templates/pages/login.html
@@ -37,14 +37,13 @@
 
         <p th:if="${param.logout}">You have successfully logged out.</p>
 
-        <div class="container flex flex-row justify-center mt-32">
-            <div class="flex-none w-1/2 mr-12">
-                <img src="" alt="Website Example">
+        <div class="container flex flex-row justify-center mt-32 w-10/12">
+            <div class="flex w-1/2 justify-center">
+                <img src="../../assets/hero1.png" alt="Website Example">
             </div>
             <div class="flex-none container flex flex-wrap flex-col justify-center content-center mt-8 w-80 border rounded-sm">
                 <div class="mt-6">
-                    <img src="" class="w-8 inline" alt="S">
-                    <img src="/assets/synapsis_black.svg" class="inline h-10 w-48" alt="Synapsis Logo">
+                    <img src="../../assets/synapsis_red.svg" class="inline h-10 w-48" alt="Synapsis Logo">
                 </div>
                 <input id="email" name="email" type="email" placeholder="Email"
                        class="font-thin font-serif mt-4 pl-3 h-14 w-3/4 content-center border rounded-md"
