#106 styled registration page

--- a/synapsis/src/main/resources/templates/pages/login.html
+++ b/synapsis/src/main/resources/templates/pages/login.html
@@ -67,7 +67,7 @@
                 </a>
 
                 <div class="mt-5 mb-4 text-black font-serif font-normal text-base ">
-                    Don't have an account? <a class="text-primary">Click here</a>
+                    Don't have an account? <a th:href="@{/register}" class="text-primary">Click here</a>
                 </div>
             </div>
         </div>
