#29 Add frontend pages to access the chat

--- a/synapsis/src/main/resources/templates/_layout.html
+++ b/synapsis/src/main/resources/templates/_layout.html
@@ -5,6 +5,8 @@
     <title>Synapsis</title>
     <script src="https://kit.fontawesome.com/6ebd7b3ed7.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.6.1/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script>
         tailwind.config = {
             theme: {
