--- a/synapsis/src/main/resources/templates/pages/companypage.html
+++ b/synapsis/src/main/resources/templates/pages/companypage.html
@@ -40,6 +40,10 @@
                     <input type="hidden" name="id" th:value="${id}" />
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Disconnect</button>
                 </form>
+                <form th:action="@{/chat/create}" method="post">
+                    <input type="hidden" name="id" th:value="${id}" />
+                    <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Chat</button>
+                </form>
             </div>
         </div>
 
