#109 Implement the frontend and backend functionality to view job postings. Frontend is not complete

--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -57,7 +57,7 @@
                             Network
                         </li>
                     </a>
-                    <a href="#">
+                    <a href="/jobs">
                         <li class="flex flex-col items-center">
                             <i class="fa-solid fa-briefcase fa-2x h-10"></i>
                             Jobs
