--- a/synapsis/src/main/resources/templates/_layout.html
+++ b/synapsis/src/main/resources/templates/_layout.html
@@ -16,7 +16,8 @@
                         'black-variant': '#3c4653',
                         'grey': '#8f949b',
                         'light-50': '#f0f1f1',
-                        'light': '#e1e2e2'
+                        'light': '#e1e2e2',
+                        'light-blue': '#edf1f7'
                     },
                     fontFamily: {
                         sans: ['Merriweather Sans', 'sans-serif'],
