#111 modify edit profile page to have existing values set on page load

--- a/synapsis/src/main/resources/templates/pages/companypage.html
+++ b/synapsis/src/main/resources/templates/pages/companypage.html
@@ -11,6 +11,7 @@
                 <div class="p-5 ">
                     <h5 class="text-left text-2xl  font-bold tracking-tight text-gray-900 dark:text-white"
                         th:text="${name}"></h5>
+                    <p th:text="${description}"></p>
                     <table>
                         <tr>
                             <th>
@@ -43,7 +44,7 @@
             </div>
         </div>
 
-        <div class="max-w-lg h-[8rem] bg-neutral-100   mr-60 absolute top-32 right-80 border-gray-200 rounded-lg shadow">
+        <div th:if="${showControls}" class="max-w-lg h-[8rem] bg-neutral-100   mr-60 absolute top-32 right-80 border-gray-200 rounded-lg shadow">
             <div class="pr-10 pb-10 pl-10 pt-5 ">
                 <a th:href="@{/company/update}" class=" text-left text-xl  font-normal  text-gray-900">
                     Edit Public Profile
