--- a/synapsis/src/main/resources/templates/pages/updateuserpage.html
+++ b/synapsis/src/main/resources/templates/pages/updateuserpage.html
@@ -7,40 +7,44 @@
     <form th:action="@{/user/update}" th:object="${updateAppUserProfileRequest}" method="post">
         <div class="flex max-w-xl bg-neutral-100 border-gray-200 ml-28 rounded-lg shadow">
             <div class="p-5">
+                <label>Description</label><br>
+                <input type="text" id="description" name="description" th:value="${profile.description}"
+                       class="mb-2 text-left   font-normal tracking-tight text-gray-900 dark:text-white"/>
+                <br>
                 <label>Education</label><br>
-                <input type="text" id="education" th:field="*{education}"
+                <input type="text" id="education" name="education" th:value="${profile.education}"
                        class="mb-2 text-left   font-normal tracking-tight text-gray-900 dark:text-white"/>
                 <br>
                 <label>Skill(s)</label><br>
-                <input type="text" id="skill" th:field="*{skill}"
+                <input type="text" id="skill" name="skill" th:value="${profile.skill}"
                        class="mb-2 text-left  font-normal tracking-tight text-gray-900 dark:text-white"/>
                 <br>
                 <label>Work</label><br>
-                <input type="text" id="work" th:field="*{work}"
+                <input type="text" id="work" name="work" th:value="${profile.work}"
                        class="mb-2 text-left  font-normal tracking-tight text-gray-900 dark:text-white"/>
                 <br>
                 <label>Course(s)</label><br>
-                <input type="text" id="course" th:field="*{course}"
+                <input type="text" id="course" name="course" th:value="${profile.course}"
                        class="mb-2 text-left font-normal tracking-tight text-gray-900 dark:text-white"/>
                 <br>
                 <label>Phone</label><br>
-                <input type="text" id="phone" th:field="*{phone}"
+                <input type="text" id="phone" name="phone" th:value="${profile.phone}"
                        class="mb-2 text-left font-normal tracking-tight text-gray-900 dark:text-white"/>
                 <br>
                 <label>Volunteering</label><br>
-                <input type="text" id="volunteering" th:field="*{volunteering}"
+                <input type="text" id="volunteering" name="volunteering" th:value="${profile.volunteering}"
                        class="mb-2 text-left font-normal tracking-tight text-gray-900 dark:text-white"/>
                 <br>
                 <label>Project(s)</label><br>
-                <input type="text" id="project" th:field="*{project}"
+                <input type="text" id="project" name="project" th:value="${profile.project}"
                        class="mb-2 text-left font-normal tracking-tight text-gray-900 dark:text-white"/>
                 <br>
                 <label>Award(s)</label><br>
-                <input type="text" id="award" th:field="*{award}"
+                <input type="text" id="award" name="award" th:value="${profile.award}"
                        class="mb-2 text-left font-normal  tracking-tight text-gray-900 dark:text-white"/>
                 <br>
                 <label>language(s)</label><br>
-                <input type="text" id="location" th:field="*{language}"
+                <input type="text" id="location" name="language" th:value="${profile.language}"
                        class="mb-2 text-left font-normal tracking-tight text-gray-900 dark:text-white"/>
                 <br>
                 <button class=" btn bg-red-500 text-white rounded-full" type="submit">Save</button>
